--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:bionic
-MAINTAINER romeOz <serggalka@gmail.com>
+MAINTAINER slicedbread69 <braddevans123@gmail.com>
 
 ENV OS_LOCALE="en_US.UTF-8"
 RUN apt-get update && apt-get install -y locales && locale-gen ${OS_LOCALE}
